# softwareDesign

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
globs/: matching_patterns.py
hashing/: force_brute.py  sha256_hashing.py
oop/: OOP.md  arguments.py  dictionary_functions.py  objects.py
parsers/: parser.py  tests_tokenizer.py  tokenizer.py
src/functions/: extensibility.py  functions.md
src/globs/: matching_patterns.md  matching_patterns.py  tests_matching_patterns.py
src/hashing/: force_brute.py  hashing.md  sha256_hashing.py
src/interpreters/: expr.py  expressions.py  interpreters.md  lazy_evaluation.py
src/oop/: OOP.md  dictionary_functions.py  objects.py
src/parsers/: parser.py  parsing.md  tests_tokenizer.py
src/protocols/: decorators.py  iterators.py  mocking_refs.py  mocks.py  protocols.py
src/testing/: function_attributes.py  instrospection.py  running_tests.md  testing.py
testing/: instrospection.py  testing.py
